Add content grid and first teaser

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
+  font-family: Georgia, serif;
+  font-size: 17px;
+  color: black;
   background-color: MediumAquamarine;
 }
 
@@ -25,6 +28,11 @@ a {
   color: MediumAquamarine;
 }
 
+h2 {
+  font-size: 17px;
+  color: #000;
+}
+
 footer {
   display: flex;
   height: 250px;
@@ -47,6 +55,41 @@ footer {
   text-decoration: underline;
   margin: auto 1em;
   color: #000;
+}
+
+.column {
+  display: flex;
+}
+
+.column.large {
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex: 0 3 630px;
+}
+
+.column.medium {
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex: 0 2 300px;
+}
+
+.column.small {
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex: 0 1 240px;}
+
+.teaser-image {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0 1em;
+}
+
+.teaser-image h2 {
+  display: inline-flex;
+  color: #FFF;
+  font-size: 30px;
 }
 
 .footer-text {
@@ -76,7 +119,6 @@ footer {
   display: flex;
   flex-basis: 1000px;
   margin: 0 auto 1em auto;
-  /*background-color: lightgray;*/
 }
 
 #logo {
@@ -92,41 +134,38 @@ footer {
   color: MediumAquamarine;
 }
 
-#main {
+#site-main {
   display: flex;
   justify-content: center;
-  margin-top: 81px;;
   width: 100%;
   min-height: 400px;
+  margin-top: 81px;;
+  padding: 2em 0;
   background-color: #FFF;
 }
 
-#main-content {
+#content {
   display: inline-flex;
   justify-content: space-between;
   align-items: flex-start;
   flex: 0 1340px;
+}
+
+#content p {
+  line-height: 1.3;
+}
+
+#art-main {
+  width: 100%;
+  padding: 0 2em;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png");
   background-color: lightgray;
 }
 
-.column {
-
+#art-main h2 {
+  font-size: 40px;
 }
 
-.column.large {
-  background-color: red;
-  width: 630px;
-}
-
-.column.medium {
-  background-color: orange;
-  width: 300px;
-}
-
-.column.small {
-  background-color: yellow;
-  width: 240px;
-}
 
 #footer-copyright {
   margin: auto;
