--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -6,6 +6,7 @@ body {
   background-color: MediumAquamarine;
 }
 
+/*Header and navigation styling*/
 header {
   position: fixed;
   width: 99%;
@@ -24,25 +25,6 @@ nav {
   width: 100%;
 }
 
-a {
-  color: MediumAquamarine;
-}
-
-h2 {
-  font-size: 17px;
-  color: #000;
-}
-
-footer {
-  display: flex;
-  height: 250px;
-  background-color: MediumAquamarine;
-  justify-content: center;
-  align-items: center;
-  font-family: verdana;
-  font-size: 12px;
-}
-
 .header-text {
   font-size: 14px;
   font-family: verdana;
@@ -55,6 +37,38 @@ footer {
   text-decoration: underline;
   margin: auto 1em;
   color: #000;
+}
+
+#header-container {
+  height: 60px;
+  display: flex;
+  flex-basis: 1000px;
+  margin: 0 auto 1em auto;
+}
+
+#logo {
+  display: flex;
+  align-items: center;
+  flex: 1 1 auto;
+  width: 250px;
+  height: auto;
+  margin: auto 1em;
+}
+
+#logo-text {
+  color: MediumAquamarine;
+}
+
+/*Content styling*/
+
+a {
+  color: MediumAquamarine;
+}
+
+h2 {
+  font-size: 30px;
+  color: #000;
+  margin: 0 0 1.3em 0;
 }
 
 .column {
@@ -92,48 +106,6 @@ footer {
   font-size: 30px;
 }
 
-.footer-text {
-  font-size: 12px;
-  font-family: verdana;
-  font-weight: normal;
-  text-decoration: underline;
-  display: inline-block;
-  margin: auto 10px;
-}
-
-.footer-text.footer-logo {
-  font-family: Georgia;
-  font-size: 16px;
-  font-weight: bold;
-  text-decoration: none;
-  color: white;
-}
-
-.footer-element {
-  display: flex;
-  margin: 20px auto;
-}
-
-#header-container {
-  height: 60px;
-  display: flex;
-  flex-basis: 1000px;
-  margin: 0 auto 1em auto;
-}
-
-#logo {
-  display: flex;
-  align-items: center;
-  flex: 1 1 auto;
-  width: 250px;
-  height: auto;
-  margin: auto 1em;
-}
-
-#logo-text {
-  color: MediumAquamarine;
-}
-
 #site-main {
   display: flex;
   justify-content: center;
@@ -155,6 +127,7 @@ footer {
   line-height: 1.3;
 }
 
+/*Specific styling of main article teaser*/
 #art-main {
   width: 100%;
   padding: 0 2em;
@@ -164,8 +137,42 @@ footer {
 
 #art-main h2 {
   font-size: 40px;
+  margin: auto;
 }
 
+/*Footer styling*/
+
+footer {
+  display: flex;
+  height: 250px;
+  background-color: MediumAquamarine;
+  justify-content: center;
+  align-items: center;
+  font-family: verdana;
+  font-size: 12px;
+}
+
+.footer-text {
+  font-size: 12px;
+  font-family: verdana;
+  font-weight: normal;
+  text-decoration: underline;
+  display: inline-block;
+  margin: auto 10px;
+}
+
+.footer-text.footer-logo {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+}
+
+.footer-element {
+  display: flex;
+  margin: 20px auto;
+}
 
 #footer-copyright {
   margin: auto;
