--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -131,26 +131,6 @@ h2 {
   text-transform: uppercase;
 }
 
-.teaser.main-w600 {
-  width: 600px;
-}
-
-.teaser.main-w600.teaser.image {
-  width: auto;
-  padding: 0 2em;
-  margin-bottom: 1em;
-}
-
-.teaser.main-w600.teaser.image h2 {
-  font-size: 40px;
-  text-align: left;
-  margin: auto;
-}
-
-.teaser.main-w600 p {
-  margin-top: 0;
-}
-
 .teaser.story {
   overflow: hidden;
 }
@@ -160,8 +140,11 @@ h2 {
 }
 
 .teaser.image {
+  width: auto;
   height: 300px;
   max-height: 300px;
+  background-size: cover;
+  background-position: center center;
   display: flex;
   align-items: center;
   background-color: lightgray;
@@ -172,12 +155,29 @@ h2 {
   width: 300px;
 }
 
+.teaser.w630 {
+  width: auto;
+}
+
+.teaser.image.w630 {
+  padding: 0 2em;
+}
+
 .teaser.image h2 {
   color: #FFF;
   font-size: 30px;
   text-align: center;
 }
 
+.teaser.w630 h2 {
+  font-size: 40px;
+  text-align: left;
+  margin: auto;
+}
+
+.teaser.w630 p {
+  margin-top: 0;
+}
 /*Footer styling*/
 
 footer {
