--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -60,14 +60,24 @@ nav {
   color: MediumAquamarine;
 }
 
-/*Content styling*/
+#nav-vertical span {
+  display: block;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+  padding: 10px 20px;
+  border-bottom: 1px solid black;
+}
+
+#nav-vertical-header {
+  margin-bottom: 41px;
+}
+
+/*Font styling*/
 
 p {
     margin-top: 0.5em;
-}
-
-a {
-  color: MediumAquamarine;
 }
 
 h2 {
@@ -75,6 +85,21 @@ h2 {
   color: #000;
   margin: 0 0 0 0;
 }
+
+h3 {
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+a {
+  color: MediumAquamarine;
+}
+
+#content p {
+  line-height: 1.3;
+}
+
+/*content grid*/
 
 .column {
   display: flex;
@@ -95,21 +120,9 @@ h2 {
 
 .column.small {
   display: inline-flex;
+  justify-content: center;
   flex-wrap: wrap;
   flex: 0 1 240px;}
-
-.nav-vertical {
-  width: 100%;
-  display: block;
-  background-color: WhiteSmoke;
-  font-family: Verdana;
-  font-size: 12px;
-  color: DimGray;
-  padding: 10px 20px;
-  border-bottom: 1px solid black;
-
-}
-
 
 #site-main {
   display: flex;
@@ -123,15 +136,11 @@ h2 {
 
 #content {
   display: inline-flex;
-  flex: 0 1340px;
+  flex: 0 1260px;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-start;
   margin: 0 2em;
-}
-
-#content p {
-  line-height: 1.3;
 }
 
 /*Specific styling for content - Teasers*/
